[master] contact fields

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -139,8 +139,9 @@
   },
   "contact": {
     "name": "name",
-    "email": "example@email.com",
+    "mail": "example@email.com",
     "msg": "What do ypu want? :)",
+    "send": "Send",
     "ok": "The message was sended! You'll recieved soon a confirmation in your inbox",
     "ko": "Oh no! There was a problem. Try again later :("
   }
