--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -142,7 +142,12 @@
     "mail": "ejemplo@email.com",
     "msg": "Escribe aquí el mesnaje...",
     "send": "Enviar",
-    "ok": "¡Mensaje enviado! Recivirás pronto en tu correo la confirmación :)",
-    "ko": "¡Vaya! Parece que hubo un problema. Inténtelo más tarde :("
+    "ok": "¡Mensaje enviado! Recibirás pronto en tu correo la confirmación :)",
+    "ko": "¡Vaya! Parece que hubo un problema. Inténtelo más tarde :(",
+    "required": "El campo está vacio",
+    "requiredMsg": "El cuerpo del mensaje está vacio",
+    "formatMail": "Un email tiene el formato xxx@xxx.xxx",
+    "minMsg": "El mensaje a de tener más de 50 caracteres",
+    "maxMsg": "El mensaje no puede exceder los 600 caracteres"
   }
 }
