--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -116,8 +116,8 @@
       "title": "Lion Miss",
       "desc": "Tienda online de ejemplo con múltiples funciones: carrito, galeria, comentarios, envio, usuarios..."
     },
-    "kodenotes": {
-      "title": "KodeNotes",
+    "cheety": {
+      "title": "Cheety",
       "desc": ""
     },
     "personalPage": {
