[master] locale change

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -4,7 +4,7 @@
     "text": "I'm a fullstack developer. Check out my profile and projects. I like cooking, drawing and being alchemist 💻🍔🎨⚗️"
   },
   "tech": {
-    "title": "Tecnologías",
+    "title": "Technolgies",
     "msg": "Pasa por encima de cada tecnología para ver su descripción.",
     "react": {
       "name": "React",
