--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,11 +1,11 @@
 {
   "welcome": {
-    "title": "Welcome!",
-    "text": "I'm a fullstack developer. Check out my profile and projects. I like cooking, drawing and being alchemist 💻🍔🎨⚗️"
+    "title": "¡Bienvenido!",
+    "text": "Soy full-stack web developer. Hecha un vistazo a mi perfil y ejemplos. También suelo cocinar, hacer dibujos y jugar a ser alquimista 💻🍔🎨⚗️"
   },
   "tech": {
     "title": "Tecnologías",
-    "msg": "Pasa por encima de cada tecnología para ver su descripción.",
+    "msg": "Pasa por encima de cada tecnología para ver su descripción",
     "html": {
       "name": "HTML 5",
       "version": "",
@@ -18,108 +18,123 @@
     },
     "ES": {
       "name": "ECMA Script",
-      "version": "",
+      "version": "13 (2022)",
       "desc": "El estándar ECMA Script es implementado por lenguajes como JavaScript. Permite crear web dinñamicas y base para todo el universo de frameworks front.end"
     },
     "typescript": {
       "name": "Typescript",
-      "version": "",
-      "desc": "Es un transpilador de JavaScript. Mejora este incluyendo funciones de lengaujes de POO tipados."
+      "version": "4.8",
+      "desc": "Es un transpilador de JavaScript. Mejora este incluyendo funciones de lengaujes de POO tipados"
     },
     "react": {
-      "name": "ES 13",
-      "version": "",
-      "desc": "Librería front-end de JavaScript para crear webs SPA. Lo considero el que mejro curva de aprendizaje tiene. También el más fácil para escalar siendo su punto débil, facilidad de crear espagueti code."
+      "name": "React",
+      "version": "18",
+      "desc": "Librería front-end de JavaScript para crear webs SPA. Lo considero el que mejro curva de aprendizaje tiene. También el más fácil para escalar siendo su punto débil, facilidad de crear espagueti code"
     },
     "redux": {
       "name": "Redux",
-      "version": "",
+      "version": "4",
       "desc": "Gestor de estados para React. Permite tener un almacén central, donde guardamos los datos que sean comunes a todos los componentes"
     },
     "vue": {
       "name": "Vue",
-      "version": "2-3",
-      "desc": "Librería front para crear webs SPA. Parece un híbrido entre React y Angular. La versión 2 trabajas con la Options APi, mientra la 3 con la Composition API. Me gusta mñas la versión 2, es más intuitiva e inmediata de usar."
+      "version": "3",
+      "desc": "Librería front para crear webs SPA. Parece un híbrido entre React y Angular. La versión 2 trabajas con la Options APi, mientra la 3 con la Composition API. Me gusta mñas la versión 2, es más intuitiva e inmediata de usar"
     },
-    "pineaple": {
-      "name": "Pineaple",
-      "version": "2-3",
+    "pinia": {
+      "name": "Pinia",
+      "version": "2",
       "desc": "Gestor de estados para Vue. Mucho más intuitivo y fácil de usar que Redux"
     },
     "angular": {
       "name": "Angular",
-      "version": "2-3",
-      "desc": "Framework para crear SPA en JavaScript. A diferencia de React y Vue, es un framework compelto ahorrandote mucho trabajo. La curva de aprendizaje es alta, pero es genial su escalabilidad en aplicaciones de tamaño mediano-grande. Ideal para principiantes para aprender prender buens prácticas."
+      "version": "10",
+      "desc": "Framework para crear SPA en JavaScript. A diferencia de React y Vue, es un framework compelto ahorrandote mucho trabajo. La curva de aprendizaje es alta, pero es genial su escalabilidad en aplicaciones de tamaño mediano-grande. Ideal para principiantes para aprender prender buens prácticas"
+    },
+    "sass": {
+      "name": "Sass",
+      "version": "3.6",
+      "desc": "Preprocesador para CSS. Extiende sus funcionalidades permitiendo trabajar de forma mñas cómoda"
+    },
+    "stylus": {
+      "name": "Stylus",
+      "version": "",
+      "desc": "Al igual que Sass es otro preprocesador. Simplifica la sintaxis y usa la sangría en vez de las llaves"
+    },
+    "pug": {
+      "name": "Pug",
+      "version": "",
+      "desc": "Lenguaje de templating para HTML. A diferencia de otros como handlebars, tiene la sintaxis simplificada y usa sangría"
     },
     "node": {
       "name": "Node",
-      "version": "2-3",
+      "version": "18",
       "desc": "Lenguaje interpretado que usa JavaScript. Permite construir rápidamente APIs, ideal para apps de tamaño pequeño-mediano"
     },
     "express": {
       "name": "Express",
-      "version": "2-3",
-      "desc": "Librería para Node para crear backs. Puedes crear APIs o devolver págians estáticas."
+      "version": "4",
+      "desc": "Librería para Node para crear backs. Puedes crear APIs o devolver págians estáticas"
     },
     "mongoose": {
       "name": "Mongoose",
-      "version": "2-3",
+      "version": "6",
       "desc": "Librería para construir un ODM de Mongo para Node"
     },
     "sequalize": {
       "name": "Sequalize",
-      "version": "2-3",
+      "version": "6",
       "desc": "Librería para construir un ORM SQL para Node"
     },
     "apollo": {
       "name": "Apollo",
-      "version": "2-3",
+      "version": "3-4",
       "desc": "Librería para front y back que eprmite trabajar con GraphQL, una nueva forma de crear APIs como si se tratase de lenguaje SQL"
     },
     "webpack": {
       "name": "Webpack",
-      "version": "2-3",
+      "version": "5",
       "desc": "Herramienta para facilutar la construcción de proyectos front-end"
     },
     "docker": {
       "name": "Docker",
-      "version": "2-3",
+      "version": "20",
       "desc": "Permite desplegar aplicaciones creando conteendores"
     },
     "npm": {
       "name": "Npm",
-      "version": "2-3",
+      "version": "8.15",
       "desc": "Gestor de paquetes para Node.js y Javascript"
     },
     "yarn": {
       "name": "Yarn",
-      "version": "2-3",
-      "desc": "Gestor de paquetes para Node.js y Javascript. La última versión tuvo bastantes problemas debido a su falat de retrocompatibilidad."
+      "version": "1.22",
+      "desc": "Gestor de paquetes para Node.js y Javascript. La última versión tuvo bastantes problemas debido a su falat de retrocompatibilidad"
     },
     "mongo": {
       "name": "Mongo",
-      "version": "2-3",
+      "version": "6",
       "desc": "El más famoso gestor de BBDD para NoSQL"
     },
     "mariadb": {
       "name": "MariaDb",
-      "version": "2-3",
+      "version": "10",
       "desc": "Gestor de BBDD de tipo SQL deribado de MySQL. Apareció por desaveniencias con Oracle cuando compró Sun"
     },
     "visualcode": {
       "name": "Visual Studio Code",
-      "version": "2-3",
+      "version": "1.72",
       "desc": "IDE considerado standard de facto en el mundo front-end. Permite ampliar funcionalidades mediante plugings"
     },
     "git": {
       "name": "Git",
-      "version": "2-3",
+      "version": "2.37",
       "desc": "El control de versiones más famoso"
     }
   },
   "exp": {
-    "title": "Experience",
-    "text": "I have been a developer for 7 years. I usually made webs in the HTML4 era when I was younger. I wanted to be an illustrator but it wasn't made for me. Decidí estudiar ingeniería informñatica y al termianr comence haciendo aplicaciones móbiles con Android. Al poco comence con el desarrollo web y me especialicé en el desarrollo front. Mainly I worked in consulting companies developing for medium-large size companies such as Odigeo, inditex and EUIPO/WIPO."
+    "title": "Experiencia",
+    "text": "Llevo 8 años dedicándome profesionalmente al desarrollo. Desde que era joven me gustaba hacer webs en la época del HTML4. Cuando crecí quise ser artista y vi que no era mi camino. Decidí estudiar ingeniería informática y al termimar me puse ha ahcer aplicaciones móbiles con Android. Al poco tiempo retomé el desarrollo web y me especialicé en el font-end. Trabajé principalmente en consultorias en proyectos para medianas y grandes compañías como Odigeo, Inditex o la WIPO/EUIPO"
   },
   "projects": {
     "lionmiss": {
@@ -128,11 +143,11 @@
     },
     "cheety": {
       "title": "Cheety",
-      "desc": ""
+      "desc": "Recopila apuntes y conocimientos relacioandos con el desarrollo"
     },
     "personalPage": {
-      "title": "Mi web personal",
-      "desc": ""
+      "title": "Web Personal",
+      "desc": "Es esta misma web. Encontrarás información sobre mi trabajo profesional :D"
     },
     "personalBlog": {
       "title": "Mi blog personal",
@@ -148,16 +163,16 @@
     }
   },
   "contact": {
-    "name": "name",
-    "mail": "example@email.com",
-    "msg": "What do ypu want? :)",
-    "send": "Send",
-    "ok": "¡Mensaje enviado! Recivirás pronto en tu correo la confirmación :)",
+    "name": "nombre",
+    "mail": "ejemplo@email.com",
+    "msg": "Escribe aquí el mesnaje...",
+    "send": "Enviar",
+    "ok": "¡Mensaje enviado! Recibirás pronto en tu correo la confirmación :)",
     "ko": "¡Vaya! Parece que hubo un problema. Inténtelo más tarde :(",
     "required": "El campo está vacio",
     "requiredMsg": "El cuerpo del mensaje está vacio",
     "formatMail": "Un email tiene el formato xxx@xxx.xxx",
-    "minMsg": "El mensaje a de tener más de 50 chars",
-    "maxMsg": "El mensaje no puede exceder los 600 chars"
+    "minMsg": "El mensaje a de tener más de 50 caracteres",
+    "maxMsg": "El mensaje no puede exceder los 600 caracteres"
   }
 }
