--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -134,7 +134,7 @@
   },
   "exp": {
     "title": "Experiencia",
-    "text": "Llevo casi 7 años dedicandome al desarrollo. Desde que era joven me gustaba hacer webs en la época del HTML4. Cuando crecí quise ser artista y vi que no era mi camino. Decidí estudiar ingeniería informñatica y al termianr comence haciendo aplicaciones móbiles con Android. Al poco comence con el desarrollo web y me especialicé en el desarrollo front. Trabajé principalmente en consultorias en proyectos para medianas y grandes compañías como Odigeo, Inditex o la WIPO/EUIPO"
+    "text": "Llevo 8 años dedicándome profesionalmente al desarrollo. Desde que era joven me gustaba hacer webs en la época del HTML4. Cuando crecí quise ser artista y vi que no era mi camino. Decidí estudiar ingeniería informática y al termimar me puse ha ahcer aplicaciones móbiles con Android. Al poco tiempo retomé el desarrollo web y me especialicé en el font-end. Trabajé principalmente en consultorias en proyectos para medianas y grandes compañías como Odigeo, Inditex o la WIPO/EUIPO"
   },
   "projects": {
     "lionmiss": {
